--- a/vignettes/GXwasR_overview.Rmd
+++ b/vignettes/GXwasR_overview.Rmd
@@ -294,9 +294,9 @@ Please follow these tutorials to know more about the functionality of the packag
 
 Tutorial for performing post-imputation QC followed by sex-aware association tests: (vignette:Use of GXwasR)
 
-* Tutorial for performing pre-imputation QC using GXwasR: ()[https://boseb.github.io/GXwasR/articles/preimputationQC.html]
-* Tutorial for performing post-imputation QC using GXwasR: ()[https://boseb.github.io/Processing_1000Genome/]
-* Tutorial for ancestry estimation: ()[https://boseb.github.io/GXwasR/articles/decoding_ancestry.html]
+* Tutorial for performing pre-imputation QC using GXwasR: [https://boseb.github.io/GXwasR/articles/preimputationQC.html](https://boseb.github.io/GXwasR/articles/preimputationQC.html)
+* Tutorial for performing post-imputation QC using GXwasR: [https://boseb.github.io/Processing_1000Genome/tutorial.html](https://boseb.github.io/Processing_1000Genome/tutorial.html)
+* Tutorial for ancestry estimation: [https://boseb.github.io/GXwasR/articles/decoding_ancestry.html](https://boseb.github.io/GXwasR/articles/decoding_ancestry.html)
 
 # Citing `GXwasR`
 
